--- a/SiteLanches/SiteLanches.csproj
+++ b/SiteLanches/SiteLanches.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>51fdc30a-40f5-4f06-a8c6-fd860504e5ad</UserSecretsId>
   </PropertyGroup>
