--- a/SiteLanches/SiteLanches.csproj
+++ b/SiteLanches/SiteLanches.csproj
@@ -26,6 +26,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\images\produtos\" />
+    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
